Fixed image alignment

--- a/css/index.css
+++ b/css/index.css
@@ -295,6 +295,11 @@ footer {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    margin-left: 0%;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
