--- a/less/home-page.less
+++ b/less/home-page.less
@@ -84,6 +84,10 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile {
+        margin-left: 0%;
+      }
       
       img {
         width: 100%;
